# Raptorflow_v1

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .gitignore.enhanced  AGENTS_TOOLS_OVERHAUL.md  AGENT_TOOL_REFACTORING_GUIDE.md  ALL_DEPLOYMENT_FIXES.md  API_COST_ESTIMATION.md  API_COST_ESTIMATION_CORRECTED.md  API_ENDPOINTS_COMPLETE.md  API_IMPLEMENTATION_COMPLETE.md  API_KEYS_AND_SECRETS_GUIDE.md  ARCHITECTURE_V2.md  AUTH_PAYMENTS_IMPLEMENTATION.md  BACKEND_REFERENCE_COMPLETE.md  BUDGET_CORRECTION_SUMMARY.md  BUG_FIXES_SUMMARY.md  BUILD_SUMMARY.txt  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_SETUP.md  CI_CD_SETUP_GUIDE.md  CLEAN.md  CODE_METRICS.md  COMPLETE_DELIVERY_SUMMARY.md  COMPLETION_REPORT.txt  COMPONENT_SPECIFICATIONS.md  COMPREHENSIVE_DEPLOYMENT_GUIDE.md  CONTENT_ROUTING_FILES.txt  CONTENT_ROUTING_INTEGRATION_GUIDE.md  CONTENT_ROUTING_SESSION_SUMMARY.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_FIXES_COMPLETED.md  CRITICAL_FIX_CRYPTOGRAPHY.md  DATABASE_MIGRATION_GUIDE.md  DEEP_RESEARCH_IMPLEMENTATION_SUMMARY.md  DELIVERABLES_MANIFEST.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FIX_SUMMARY.md  (+129 more)
backend/: .dockerignore  .env.example  Dockerfile  __init__.py  alembic.ini  config.py  icp_agent.py  main.py  main_v2.py  move_agent.py  positioning_agent.py  pyproject.toml  requirements-dev.txt  requirements.cloud.txt  requirements.existing.lock.txt  requirements.txt  test_requirements.py
backend/agents/: ai_reasoning_engine.py  analytics.py  base_agent.py  base_agent_v2.py  channel_mapper_agent.py  content.py  content_router_agent.py  content_router_agent_refactored.py  context_processor_agent.py  explanation_agent.py  icp.py  icp_agent_v2.py  icp_builder_agent.py  icp_v2.py  jtbd_extraction_agent.py  moves_content_agent_enhanced.py  neural_network_engine.py  orchestration_v2.py  orchestrator.py  orchestrator_v2.py  positioning.py  positioning_v2.py  quantum_optimization_engine.py  research.py  research_v2.py  research_v3_enhanced.py  strategy.py  strategy_orchestrator.py  trend_monitor.py
backend/alembic/: env.py
backend/api/: budget_routes.py  client.py  content_routing_routes.py  content_routing_routes_v1.py  conversation_routes.py  embedding_routes.py  oauth_routes.py  ocr_routes.py  research_routes.py  routes.py  websocket_routes.py
backend/app/: main.py
backend/core/: __init__.py  ai_provider_manager.py  service_factories.py
backend/integrations/: email_automation.py  github_integration.py  slack_integration.py  (+3 more)
(+289 files in other folders)
